dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -237,11 +237,6 @@
   "console.containers.webhooks-table.index.templateId": "Template ID",
   "console.containers.webhooks-table.index.format": "Format",
   "console.containers.webhooks-table.index.baseUrl": "Base URL",
-  "console.store.middleware.logics.init.errTooFewRights": "Your account does not possess sufficient rights to use the console",
-  "console.store.middleware.logics.init.errStateRequested": "Your account still needs to be approved by an administrator. You will receive a confirmation email once your account is approved.",
-  "console.store.middleware.logics.init.errStateRejected": "Your account has been rejected by an administrator",
-  "console.store.middleware.logics.init.errStateSuspended": "Your account has been suspended by an administrator. Please contact support for further information about your account status.",
-  "console.store.middleware.logics.init.errEmailValidation": "Your account is restricted until your email address has been validated",
   "console.views.admin-user-management-edit.index.updateSuccess": "User updated",
   "console.views.admin-user-management-edit.index.updateFailure": "There was an error and the user could not be updated",
   "console.views.admin-user-management-edit.index.deleteFailure": "There was an error and the user could not be deleted",
@@ -346,9 +341,6 @@
   "console.views.gateway-general-settings.index.updateSuccess": "Gateway updated",
   "console.views.gateway-general-settings.index.deleteGateway": "Delete gateway",
   "console.views.gateway-general-settings.index.modalWarning": "Are you sure you want to delete \"{gtwName}\"? This action cannot be undone and it will not be possible to reuse the gateway ID.",
-  "console.views.login.index.welcome": "Welcome to {siteName}",
-  "console.views.login.index.loginSub": "You need to be logged in to use this site.",
-  "console.views.login.index.approvalPending": "Your user account needs to be approved by an administrator. You will be notified via email upon approval.",
   "console.views.organization-add.organization-add.createOrganization": "Create organization",
   "console.views.organization-data.organization-data.orgData": "Organization data",
   "console.views.organization-general-settings.organization-general-settings.deleteOrg": "Delete organization",
@@ -367,6 +359,16 @@
   "containers.offline-status.index.offline": "The application went offline",
   "containers.offline-status.index.online": "The application is back online",
   "lib.components.init.initializing": "Initializing…",
+  "lib.components.with-auth.errTooFewRights": "Your account does not possess sufficient rights to use the console.",
+  "lib.components.with-auth.errTooFewRightsTitle": "Insufficient rights",
+  "lib.components.with-auth.errStateRequested": "Your account still needs to be approved by an administrator. You will receive a confirmation email once your account is approved.",
+  "lib.components.with-auth.errStateRequestedTitle": "Account unapproved",
+  "lib.components.with-auth.errStateRejected": "Your account has been rejected by an administrator.",
+  "lib.components.with-auth.errStateRejectedTitle": "Account rejected",
+  "lib.components.with-auth.errStateSuspended": "Your account has been suspended by an administrator. Please contact support for further information about your account status.",
+  "lib.components.with-auth.errStateSuspendedTitle": "Account suspended",
+  "lib.components.with-auth.errEmailValidation": "Your account is restricted until your email address has been validated.",
+  "lib.components.with-auth.errEmailValidationTitle": "Email validation pending",
   "lib.errors.error-messages.additionalInformation": "Additional Information (please attach to error inquiries)",
   "lib.errors.error-messages.contactAdministrator": "If the error persists after refreshing, please contact an administrator",
   "lib.errors.error-messages.error": "Error",
@@ -569,6 +571,7 @@
   "lib.shared-messages.pubsubFormat": "Pub-sub format",
   "lib.shared-messages.pubsubId": "Pub-sub ID",
   "lib.shared-messages.pubsubs": "Pub-subs",
+  "lib.shared-messages.redirecting": "Redirecting…",
   "lib.shared-messages.refresh": "Refresh",
   "lib.shared-messages.refreshPage": "Refresh page",
   "lib.shared-messages.removeCollaborator": "Remove collaborator",
