--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -237,11 +237,6 @@
   "console.containers.webhooks-table.index.templateId": "Xxxxxxxx XX",
   "console.containers.webhooks-table.index.format": "Xxxxxx",
   "console.containers.webhooks-table.index.baseUrl": "Xxxx XXX",
-  "console.store.middleware.logics.init.errTooFewRights": "Xxxx xxxxxxx xxxx xxx xxxxxxx xxxxxxxxxx xxxxxx xx xxx xxx xxxxxxx",
-  "console.store.middleware.logics.init.errStateRequested": "Xxxx xxxxxxx xxxxx xxxxx xx xx xxxxxxxx xx xx xxxxxxxxxxxxx. Xxx xxxx xxxxxxx x xxxxxxxxxxxx xxxxx xxxx xxxx xxxxxxx xx xxxxxxxx.",
-  "console.store.middleware.logics.init.errStateRejected": "Xxxx xxxxxxx xxx xxxx xxxxxxxx xx xx xxxxxxxxxxxxx",
-  "console.store.middleware.logics.init.errStateSuspended": "Xxxx xxxxxxx xxx xxxx xxxxxxxxx xx xx xxxxxxxxxxxxx. Xxxxxx xxxxxxx xxxxxxx xxx xxxxxxx xxxxxxxxxxx xxxxx xxxx xxxxxxx xxxxxx.",
-  "console.store.middleware.logics.init.errEmailValidation": "Xxxx xxxxxxx xx xxxxxxxxxx xxxxx xxxx xxxxx xxxxxxx xxx xxxx xxxxxxxxx",
   "console.views.admin-user-management-edit.index.updateSuccess": "Xxxx xxxxxxx",
   "console.views.admin-user-management-edit.index.updateFailure": "Xxxxx xxx xx xxxxx xxx xxx xxxx xxxxx xxx xx xxxxxxx",
   "console.views.admin-user-management-edit.index.deleteFailure": "Xxxxx xxx xx xxxxx xxx xxx xxxx xxxxx xxx xx xxxxxxx",
@@ -346,9 +341,6 @@
   "console.views.gateway-general-settings.index.updateSuccess": "Xxxxxxx xxxxxxx",
   "console.views.gateway-general-settings.index.deleteGateway": "Xxxxxx xxxxxxx",
   "console.views.gateway-general-settings.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx \"{gtwName}\"? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxxxxx XX.",
-  "console.views.login.index.welcome": "Xxxxxxx xx {siteName}",
-  "console.views.login.index.loginSub": "Xxx xxxx xx xx xxxxxx xx xx xxx xxxx xxxx.",
-  "console.views.login.index.approvalPending": "Xxxx xxxx xxxxxxx xxxxx xx xx xxxxxxxx xx xx xxxxxxxxxxxxx. Xxx xxxx xx xxxxxxxx xxx xxxxx xxxx xxxxxxxx.",
   "console.views.organization-add.organization-add.createOrganization": "Xxxxxx xxxxxxxxxxxx",
   "console.views.organization-data.organization-data.orgData": "Xxxxxxxxxxxx xxxx",
   "console.views.organization-general-settings.organization-general-settings.deleteOrg": "Xxxxxx xxxxxxxxxxxx",
@@ -367,6 +359,16 @@
   "containers.offline-status.index.offline": "Xxx xxxxxxxxxxx xxxx xxxxxxx",
   "containers.offline-status.index.online": "Xxx xxxxxxxxxxx xx xxxx xxxxxx",
   "lib.components.init.initializing": "Xxxxxxxxxxxxx",
+  "lib.components.with-auth.errTooFewRights": "Xxxx xxxxxxx xxxx xxx xxxxxxx xxxxxxxxxx xxxxxx xx xxx xxx xxxxxxx.",
+  "lib.components.with-auth.errTooFewRightsTitle": "Xxxxxxxxxxxx xxxxxx",
+  "lib.components.with-auth.errStateRequested": "Xxxx xxxxxxx xxxxx xxxxx xx xx xxxxxxxx xx xx xxxxxxxxxxxxx. Xxx xxxx xxxxxxx x xxxxxxxxxxxx xxxxx xxxx xxxx xxxxxxx xx xxxxxxxx.",
+  "lib.components.with-auth.errStateRequestedTitle": "Xxxxxxx xxxxxxxxxx",
+  "lib.components.with-auth.errStateRejected": "Xxxx xxxxxxx xxx xxxx xxxxxxxx xx xx xxxxxxxxxxxxx.",
+  "lib.components.with-auth.errStateRejectedTitle": "Xxxxxxx xxxxxxxx",
+  "lib.components.with-auth.errStateSuspended": "Xxxx xxxxxxx xxx xxxx xxxxxxxxx xx xx xxxxxxxxxxxxx. Xxxxxx xxxxxxx xxxxxxx xxx xxxxxxx xxxxxxxxxxx xxxxx xxxx xxxxxxx xxxxxx.",
+  "lib.components.with-auth.errStateSuspendedTitle": "Xxxxxxx xxxxxxxxx",
+  "lib.components.with-auth.errEmailValidation": "Xxxx xxxxxxx xx xxxxxxxxxx xxxxx xxxx xxxxx xxxxxxx xxx xxxx xxxxxxxxx.",
+  "lib.components.with-auth.errEmailValidationTitle": "Xxxxx xxxxxxxxxx xxxxxxx",
   "lib.errors.error-messages.additionalInformation": "Xxxxxxxxxx Xxxxxxxxxxx (xxxxxx xxxxxx xx xxxxx xxxxxxxxx)",
   "lib.errors.error-messages.contactAdministrator": "Xx xxx xxxxx xxxxxxxx xxxxx xxxxxxxxxx, xxxxxx xxxxxxx xx xxxxxxxxxxxxx",
   "lib.errors.error-messages.error": "Xxxxx",
@@ -569,6 +571,7 @@
   "lib.shared-messages.pubsubFormat": "Xxx-xxx xxxxxx",
   "lib.shared-messages.pubsubId": "Xxx-xxx XX",
   "lib.shared-messages.pubsubs": "Xxx-xxxx",
+  "lib.shared-messages.redirecting": "Xxxxxxxxxxxx",
   "lib.shared-messages.refresh": "Xxxxxxx",
   "lib.shared-messages.refreshPage": "Xxxxxxx xxxx",
   "lib.shared-messages.removeCollaborator": "Xxxxxx xxxxxxxxxxxx",
