console,oauth: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -184,6 +184,13 @@
   "console.components.webhook-form.index.headersValidateRequired": "All header entry values are required. Please remove empty entries.",
   "console.components.webhook-form.index.downlinkAPIKey": "Downlink API Key",
   "console.components.webhook-form.index.downlinkAPIKeyDesc": "The API Key will be provided to the endpoint using the X-Downlink-Apikey header",
+  "console.components.webhook-form.index.templateInformation": "Template information",
+  "console.components.webhook-template-form.index.createTemplate": "Create {template} webhook",
+  "console.components.webhook-template-form.index.idPlaceholder": "my-new-{templateId}-webhook",
+  "console.components.webhook-template-form.index.templateSettings": "Template settings",
+  "console.components.webhook-template-info.index.moreInfo": "More info",
+  "console.components.webhook-template-info.index.documentation": "Documentation",
+  "console.components.webhook-template-info.index.templateInformation": "Template information",
   "console.containers.api-keys-table.index.keyId": "Key ID",
   "console.containers.api-keys-table.index.grantedRights": "Granted Rights",
   "console.containers.application-payload-formatters.downlink.infoText": "These payload formatters are executed on downlink messages to all devices in this application. If payload formatters are also set for a specific device, only those will be executed for downlinks to that device.",
@@ -260,6 +267,11 @@
   "console.views.application-integrations-pubsub-edit.application-integrations-pubsub-edit.editPubsub": "Edit PubSub",
   "console.views.application-integrations-pubsub-edit.application-integrations-pubsub-edit.updateSuccess": "Successfully updated PubSub",
   "console.views.application-integrations-pubsub-edit.application-integrations-pubsub-edit.deleteSuccess": "Successfully deleted PubSub",
+  "console.views.application-integrations-webhook-add-choose.index.chooseTemplate": "Choose webhook template",
+  "console.views.application-integrations-webhook-add-choose.index.customTileDescription": "Create a custom webhook without template",
+  "console.views.application-integrations-webhook-add-form.index.addCustomWebhook": "Add custom webhook",
+  "console.views.application-integrations-webhook-add-form.index.addWebhookViaTemplate": "Add webhook from template",
+  "console.views.application-integrations-webhook-add-form.index.customWebhook": "Custom webhook",
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.editWebhook": "Edit Webhook",
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.updateSuccess": "Successfully updated webhook",
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.deleteSuccess": "Successfully deleted webhook",
