--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -220,6 +220,7 @@
   "console.containers.pubsubs-table.index.host": "Server Host",
   "console.containers.webhook-formats-select.index.title": "Webhook Format",
   "console.containers.webhook-formats-select.index.warning": "Could not retrieve the list of available webhook formats",
+  "console.containers.webhooks-table.index.templateId": "Template ID",
   "console.containers.webhooks-table.index.format": "Format",
   "console.containers.webhooks-table.index.baseUrl": "Base URL",
   "console.store.middleware.logics.init.errTooFewRights": "Your account does not possess sufficient rights to use the console.",
