console: Update messages

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -94,6 +94,16 @@
   "console.components.device-import-form.index.fileInfoPlaceholder": "Please select a template format",
   "console.components.device-import-form.index.claimAuthCode": "Set claim authentication code",
   "console.components.device-import-form.index.targetedComponents": "Targeted components",
+  "console.components.downlink-form.index.insertMode": "Insert Mode",
+  "console.components.downlink-form.index.insertModeDescription": "Messages can either replace the downlink queue or append to it",
+  "console.components.downlink-form.index.replace": "Replace",
+  "console.components.downlink-form.index.push": "Push",
+  "console.components.downlink-form.index.validateFPort": "FPort must be between 1 and 223",
+  "console.components.downlink-form.index.confirmation": "Confirmation",
+  "console.components.downlink-form.index.confirmed": "Confirmed",
+  "console.components.downlink-form.index.scheduleDownlink": "Schedule Downlink",
+  "console.components.downlink-form.index.downlinkSuccess": "Downlink was scheduled successfully",
+  "console.components.downlink-form.index.payloadDescription": "The desired payload bytes of the downlink message",
   "console.components.gateway-data-form.index.enforced": "Enforced",
   "console.components.gateway-data-form.index.dutyCycle": "Duty cycle",
   "console.components.gateway-data-form.index.gatewayIdPlaceholder": "my-new-gateway",
@@ -514,6 +524,7 @@
   "lib.shared-messages.lorawanInformation": "LoRaWAN information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN options",
   "lib.shared-messages.macVersion": "MAC version",
+  "lib.shared-messages.messages": "Messages",
   "lib.shared-messages.messageTypes": "Message types",
   "lib.shared-messages.model": "Model",
   "lib.shared-messages.mqtt": "MQTT",
@@ -548,6 +559,7 @@
   "lib.shared-messages.payloadFormattersUpdateSuccess": "Payload formatter updated",
   "lib.shared-messages.payloadFormattersUplink": "Uplink payload formatters",
   "lib.shared-messages.phyVersion": "PHY version",
+  "lib.shared-messages.payload": "Payload",
   "lib.shared-messages.port": "Port",
   "lib.shared-messages.privacyPolicy": "Privacy policy",
   "lib.shared-messages.provider": "Provider",
@@ -577,6 +589,7 @@
   "lib.shared-messages.stateSuspended": "Suspended",
   "lib.shared-messages.status": "Status",
   "lib.shared-messages.statusUnknown": "Status unknown",
+  "lib.shared-messages.success": "Success",
   "lib.shared-messages.takeMeBack": "Take me back",
   "lib.shared-messages.termsAndCondition": "Terms and conditions",
   "lib.shared-messages.time": "Time",
