--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -94,6 +94,16 @@
   "console.components.device-import-form.index.fileInfoPlaceholder": "Xxxxxx xxxxxx x xxxxxxxx xxxxxx",
   "console.components.device-import-form.index.claimAuthCode": "Xxx xxxxx xxxxxxxxxxxxxx xxxx",
   "console.components.device-import-form.index.targetedComponents": "Xxxxxxxx xxxxxxxxxx",
+  "console.components.downlink-form.index.insertMode": "Xxxxxx Xxxx",
+  "console.components.downlink-form.index.insertModeDescription": "Xxxxxxxx xxx xxxxxx xxxxxxx xxx xxxxxxxx xxxxx xx xxxxxx xx xx",
+  "console.components.downlink-form.index.replace": "Xxxxxxx",
+  "console.components.downlink-form.index.push": "Xxxx",
+  "console.components.downlink-form.index.validateFPort": "XXxxx xxxx xx xxxxxxx x xxx xxx",
+  "console.components.downlink-form.index.confirmation": "Xxxxxxxxxxxx",
+  "console.components.downlink-form.index.confirmed": "Xxxxxxxxx",
+  "console.components.downlink-form.index.scheduleDownlink": "Xxxxxxxx Xxxxxxxx",
+  "console.components.downlink-form.index.downlinkSuccess": "Xxxxxxxx xxx xxxxxxxxx xxxxxxxxxxxx",
+  "console.components.downlink-form.index.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxxxx xxxxxxx",
   "console.components.gateway-data-form.index.enforced": "Xxxxxxxx",
   "console.components.gateway-data-form.index.dutyCycle": "Xxxx xxxxx",
   "console.components.gateway-data-form.index.gatewayIdPlaceholder": "xx-xxx-xxxxxxx",
@@ -514,6 +524,7 @@
   "lib.shared-messages.lorawanInformation": "XxXxXXX xxxxxxxxxxx",
   "lib.shared-messages.lorawanOptions": "XxXxXXX xxxxxxx",
   "lib.shared-messages.macVersion": "XXX xxxxxxx",
+  "lib.shared-messages.messages": "Xxxxxxxx",
   "lib.shared-messages.messageTypes": "Xxxxxxx xxxxx",
   "lib.shared-messages.model": "Xxxxx",
   "lib.shared-messages.mqtt": "XXXX",
@@ -548,6 +559,7 @@
   "lib.shared-messages.payloadFormattersUpdateSuccess": "Xxxxxxx xxxxxxxxx xxxxxxx",
   "lib.shared-messages.payloadFormattersUplink": "Xxxxxx xxxxxxx xxxxxxxxxx",
   "lib.shared-messages.phyVersion": "XXX xxxxxxx",
+  "lib.shared-messages.payload": "Xxxxxxx",
   "lib.shared-messages.port": "Xxxx",
   "lib.shared-messages.privacyPolicy": "Xxxxxxx xxxxxx",
   "lib.shared-messages.provider": "Xxxxxxxx",
@@ -577,6 +589,7 @@
   "lib.shared-messages.stateSuspended": "Xxxxxxxxx",
   "lib.shared-messages.status": "Xxxxxx",
   "lib.shared-messages.statusUnknown": "Xxxxxx xxxxxxx",
+  "lib.shared-messages.success": "Xxxxxxx",
   "lib.shared-messages.takeMeBack": "Xxxx xx xxxx",
   "lib.shared-messages.termsAndCondition": "Xxxxx xxx xxxxxxxxxx",
   "lib.shared-messages.time": "Xxxx",
