oauth: Add title to revoke_all_access

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -646,7 +646,8 @@
   "oauth.views.update-password.index.newPassword": "Xxx Xxxxxxxx",
   "oauth.views.update-password.index.oldPassword": "Xxx Xxxxxxxx",
   "oauth.views.update-password.index.passwordChanged": "Xxxxxxxx xxxxxxx xxxxxxxxxxxx",
-  "oauth.views.update-password.index.revokeAllAccess": "Xxx xxx xxxx xxx xxxxxxx",
+  "oauth.views.update-password.index.revokeAccess": "Xxxxxx Xxxxxx",
+  "oauth.views.update-password.index.logoutAllDevices": "Xxx xxx xxxx xxx xxxxxxx",
   "oauth.views.update-password.index.revokeWarning": "Xxxx xxxx xxxxxx xxxxxx xxxx xxx xxxxxx xx xxxxxxx",
   "oauth.views.update-password.index.sessionRevoked": "Xxxx xxxxxxx xx xxxxxxx",
   "oauth.views.validate.index.validateSuccess": "Xxxxxxx xxxx xxxxxxxxx xxxxxxxxxxxx",
