--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -646,7 +646,8 @@
   "oauth.views.update-password.index.newPassword": "New Password",
   "oauth.views.update-password.index.oldPassword": "Old Password",
   "oauth.views.update-password.index.passwordChanged": "Password changed successfully",
-  "oauth.views.update-password.index.revokeAllAccess": "Log out from all devices",
+  "oauth.views.update-password.index.revokeAccess": "Revoke Access",
+  "oauth.views.update-password.index.logoutAllDevices": "Log out from all devices",
   "oauth.views.update-password.index.revokeWarning": "This will revoke access from all logged in devices",
   "oauth.views.update-password.index.sessionRevoked": "Your session is revoked",
   "oauth.views.validate.index.validateSuccess": "Contact info validated successfully",
