dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -2,12 +2,12 @@
   "components.data-sheet.index.noData": "No data available",
   "components.error-notification.story.problem": "We got a problem here!",
   "components.error-notification.story.lengthyProblem": "We got a problem here! And the description is quite lengthy as well, which can sometimes be a problem.",
-  "components.event.index.eventData": "Event data",
-  "components.events.index.truncated": "Events have been truncated",
-  "components.events.index.showing": "Showing all available events",
-  "components.events.widget.index.latestEvents": "Latest events",
-  "components.events.widget.index.seeAllActivity": "See all activity",
-  "components.events.widget.index.unknown": "Unknown",
+  "components.events-list.event.details.index.showRaw": "Show raw payload",
+  "components.events-list.event.details.index.hideRaw": "Hide raw payload",
+  "components.events-list.list.error-boundary.index.title": "Error cause",
+  "components.events-list.list.error-boundary.index.overviewEntry": "Something went wrong when displaying this event",
+  "components.events-list.widget.index.latestEvents": "Latest events",
+  "components.events-list.widget.index.seeAllActivity": "See all activity",
   "components.file-input.index.selectAFile": "Select a file…",
   "components.file-input.index.changeFile": "Change file…",
   "components.file-input.index.noFileSelected": "No file selected",
@@ -104,6 +104,10 @@
   "console.components.downlink-form.index.scheduleDownlink": "Schedule Downlink",
   "console.components.downlink-form.index.downlinkSuccess": "Downlink was scheduled successfully",
   "console.components.downlink-form.index.payloadDescription": "The desired payload bytes of the downlink message",
+  "console.components.events-list.messages.frmPayload": "FRMPayload",
+  "console.components.events-list.messages.devAddr": "DevAddr",
+  "console.components.events-list.messages.fPort": "FPort",
+  "console.components.events-list.shared.components.json-payload.index.invalid": "Invalid JSON",
   "console.components.gateway-data-form.index.enforced": "Enforced",
   "console.components.gateway-data-form.index.dutyCycle": "Duty cycle",
   "console.components.gateway-data-form.index.gatewayIdPlaceholder": "my-new-gateway",
