--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -105,7 +105,7 @@
   "console.components.payload-formatters-form.index.repository": "Repository",
   "console.components.payload-formatters-form.index.formatterType": "Formatter type",
   "console.components.payload-formatters-form.index.formatterParameter": "Formatter parameter",
-  "console.components.payload-formatters-form.index.grpcDescription": "The address of the service to connect to",
+  "console.components.payload-formatters-form.index.grpcFieldDescription": "The address of the service to connect to",
   "console.components.pubsub-form.messages.idPlaceholder": "my-new-pubsub",
   "console.components.pubsub-form.messages.messageInfo": "For each enabled message type, an optional sub-topic can be defined",
   "console.components.pubsub-form.messages.deletePubsub": "Delete Pubsub",
