--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -105,7 +105,7 @@
   "console.components.payload-formatters-form.index.repository": "Xxxxxxxxxx",
   "console.components.payload-formatters-form.index.formatterType": "Xxxxxxxxx xxxx",
   "console.components.payload-formatters-form.index.formatterParameter": "Xxxxxxxxx xxxxxxxxx",
-  "console.components.payload-formatters-form.index.grpcDescription": "Xxx xxxxxxx xx xxx xxxxxxx xx xxxxxxx xx",
+  "console.components.payload-formatters-form.index.grpcFieldDescription": "Xxx xxxxxxx xx xxx xxxxxxx xx xxxxxxx xx",
   "console.components.pubsub-form.messages.idPlaceholder": "xx-xxx-xxxxxx",
   "console.components.pubsub-form.messages.messageInfo": "Xxx xxxx xxxxxxx xxxxxxx xxxx, xx xxxxxxxx xxx-xxxxx xxx xx xxxxxxx",
   "console.components.pubsub-form.messages.deletePubsub": "Xxxxxx Xxxxxx",
