--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -106,6 +106,8 @@
   "console.components.payload-formatters-form.index.formatterType": "Formatter type",
   "console.components.payload-formatters-form.index.formatterParameter": "Formatter parameter",
   "console.components.payload-formatters-form.index.grpcFieldDescription": "The address of the service to connect to",
+  "console.components.payload-formatters-form.index.appFormatter": "Use application payload formatter",
+  "console.components.payload-formatters-form.index.appFormatterWarning": "This option sets both uplink and downlink formatters to application defaults",
   "console.components.pubsub-form.messages.idPlaceholder": "my-new-pubsub",
   "console.components.pubsub-form.messages.messageInfo": "For each enabled message type, an optional sub-topic can be defined",
   "console.components.pubsub-form.messages.deletePubsub": "Delete Pubsub",
