dev: Update translations

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -262,8 +262,6 @@
   "console.views.application-general-settings.index.deleteApp": "Xxxxxx xxxxxxxxxxx",
   "console.views.application-general-settings.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx \"{appName}\"? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxxxxxxxxx XX.",
   "console.views.application-general-settings.index.updateSuccess": "Xxxxxxxxxxx xxxxxxx",
-  "console.views.application-general-settings.index.attributesValidateRequired": "Xxx xxxxxxxxx xxxxx xxxxxx xxx xxxxxxxx. Xxxxxx xxxxxx xxxxx xxxxxxx.",
-  "console.views.application-general-settings.index.attributeKeyValidateTooShort": "Xxxxxxxxx xxxx xxxx xxxx xx xxxxx x xxxxxxxxxx xxx xxxxxxx xx xxxxxxx xxxxxxxxxx",
   "console.views.application-integrations-mqtt.index.publicAddress": "Xxxxxx xxxxxxx",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Xxxxxx XXX xxxxxxx",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Xxxxxxxx xxx XXX xxx",
@@ -428,6 +426,8 @@
   "lib.shared-messages.appSKey": "XxxXXxx",
   "lib.shared-messages.attributeDescription": "Xxxxxxxxxx xxx xx xxxx xx xxx xxxxxxxxx xxxxxxxxxxx xxxxx xxx xxxxxxxxxxx, xx xx xxxx xx xxxxxxx, xx xxxxxx xxx xxxx xxx xxxxxxxxxxxx",
   "lib.shared-messages.attributes": "Xxxxxxxxxx",
+  "lib.shared-messages.attributeKeyValidateTooShort": "Xxxxxxxxx xxxx xxxx xxxx xx xxxxx x xxxxxxxxxx xxx xxxxxxx xx xxxxxxx xxxxxxxxxx",
+  "lib.shared-messages.attributesValidateRequired": "Xxx xxxxxxxxx xxxxx xxxxxx xxx xxxxxxxx. Xxxxxx xxxxxx xxxxx xxxxxxx.",
   "lib.shared-messages.automaticUpdates": "Xxxxxxxxx xxxxxxx",
   "lib.shared-messages.brand": "Xxxxx",
   "lib.shared-messages.cancel": "Xxxxxx",
