--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -262,8 +262,6 @@
   "console.views.application-general-settings.index.deleteApp": "Delete application",
   "console.views.application-general-settings.index.modalWarning": "Are you sure you want to delete \"{appName}\"? This action cannot be undone and it will not be possible to reuse the application ID.",
   "console.views.application-general-settings.index.updateSuccess": "Application updated",
-  "console.views.application-general-settings.index.attributesValidateRequired": "All attribute entry values are required. Please remove empty entries.",
-  "console.views.application-general-settings.index.attributeKeyValidateTooShort": "Attribute keys must have at least 3 characters and contain no special characters",
   "console.views.application-integrations-mqtt.index.publicAddress": "Public address",
   "console.views.application-integrations-mqtt.index.publicTlsAddress": "Public TLS address",
   "console.views.application-integrations-mqtt.index.generateApiKey": "Generate new API key",
@@ -428,6 +426,8 @@
   "lib.shared-messages.appSKey": "AppSKey",
   "lib.shared-messages.attributeDescription": "Attributes can be used to set arbitrary information about the application, to be used by scripts, or simply for your own organization",
   "lib.shared-messages.attributes": "Attributes",
+  "lib.shared-messages.attributeKeyValidateTooShort": "Attribute keys must have at least 3 characters and contain no special characters",
+  "lib.shared-messages.attributesValidateRequired": "All attribute entry values are required. Please remove empty entries.",
   "lib.shared-messages.automaticUpdates": "Automatic updates",
   "lib.shared-messages.brand": "Brand",
   "lib.shared-messages.cancel": "Cancel",
