console: Update title and description for mac and phy

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -526,7 +526,8 @@
   "lib.shared-messages.longitudeDesc": "The east-west position in degrees, where 0 is the prime meridian (Greenwich)",
   "lib.shared-messages.lorawanInformation": "LoRaWAN information",
   "lib.shared-messages.lorawanOptions": "LoRaWAN options",
-  "lib.shared-messages.macVersion": "MAC version",
+  "lib.shared-messages.macVersion": "LoRaWAN version",
+  "lib.shared-messages.macVersionDescription": "The LoRaWAN version (MAC), as provided by the device manufacturer",
   "lib.shared-messages.messages": "Messages",
   "lib.shared-messages.messageTypes": "Message types",
   "lib.shared-messages.model": "Model",
@@ -561,7 +562,8 @@
   "lib.shared-messages.payloadFormattersUpdateFailure": "There was an error updating the payload formatter",
   "lib.shared-messages.payloadFormattersUpdateSuccess": "Payload formatter updated",
   "lib.shared-messages.payloadFormattersUplink": "Uplink payload formatters",
-  "lib.shared-messages.phyVersion": "PHY version",
+  "lib.shared-messages.phyVersion": "Regional Parameters version",
+  "lib.shared-messages.phyVersionDescription": "The Regional Parameters version (PHY), as provided by the device manufacturer",
   "lib.shared-messages.payload": "Payload",
   "lib.shared-messages.port": "Port",
   "lib.shared-messages.privacyPolicy": "Privacy policy",
