--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -526,7 +526,8 @@
   "lib.shared-messages.longitudeDesc": "Xxx xxxx-xxxx xxxxxxxx xx xxxxxxx, xxxxx x xx xxx xxxxx xxxxxxxx (Xxxxxxxxx)",
   "lib.shared-messages.lorawanInformation": "XxXxXXX xxxxxxxxxxx",
   "lib.shared-messages.lorawanOptions": "XxXxXXX xxxxxxx",
-  "lib.shared-messages.macVersion": "XXX xxxxxxx",
+  "lib.shared-messages.macVersion": "XxXxXXX xxxxxxx",
+  "lib.shared-messages.macVersionDescription": "Xxx XxXxXXX xxxxxxx (XXX), xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx",
   "lib.shared-messages.messages": "Xxxxxxxx",
   "lib.shared-messages.messageTypes": "Xxxxxxx xxxxx",
   "lib.shared-messages.model": "Xxxxx",
@@ -561,7 +562,8 @@
   "lib.shared-messages.payloadFormattersUpdateFailure": "Xxxxx xxx xx xxxxx xxxxxxxx xxx xxxxxxx xxxxxxxxx",
   "lib.shared-messages.payloadFormattersUpdateSuccess": "Xxxxxxx xxxxxxxxx xxxxxxx",
   "lib.shared-messages.payloadFormattersUplink": "Xxxxxx xxxxxxx xxxxxxxxxx",
-  "lib.shared-messages.phyVersion": "XXX xxxxxxx",
+  "lib.shared-messages.phyVersion": "Xxxxxxxx Xxxxxxxxxx xxxxxxx",
+  "lib.shared-messages.phyVersionDescription": "Xxx Xxxxxxxx Xxxxxxxxxx xxxxxxx (XXX), xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx",
   "lib.shared-messages.payload": "Xxxxxxx",
   "lib.shared-messages.port": "Xxxx",
   "lib.shared-messages.privacyPolicy": "Xxxxxxx xxxxxx",
