dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -637,10 +637,11 @@
   "lib.shared-messages.webhookId": "Webhook ID",
   "lib.shared-messages.webhooks": "Webhooks",
   "oauth.views.authorize.index.modalTitle": "Request for permission",
-  "oauth.views.authorize.index.modalSubtitle": "{clientName} is requesting permissions to do the following:",
+  "oauth.views.authorize.index.modalSubtitle": "{clientName} is requesting to be granted the following rights:",
   "oauth.views.authorize.index.loginInfo": "You are logged in as {userId}.",
   "oauth.views.authorize.index.redirectInfo": "You will be redirected to {redirectUri}",
   "oauth.views.authorize.index.authorize": "Authorize",
+  "oauth.views.authorize.index.noDescription": "This client does not provide a description",
   "oauth.views.code.index.code": "Your authorization code",
   "oauth.views.create-account.index.createAccount": "Create a new {siteName} account",
   "oauth.views.create-account.index.register": "Register",
