--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -637,10 +637,11 @@
   "lib.shared-messages.webhookId": "Xxxxxxx XX",
   "lib.shared-messages.webhooks": "Xxxxxxxx",
   "oauth.views.authorize.index.modalTitle": "Xxxxxxx xxx xxxxxxxxxx",
-  "oauth.views.authorize.index.modalSubtitle": "{clientName} xx xxxxxxxxxx xxxxxxxxxxx xx xx xxx xxxxxxxxx:",
+  "oauth.views.authorize.index.modalSubtitle": "{clientName} xx xxxxxxxxxx xx xx xxxxxxx xxx xxxxxxxxx xxxxxx:",
   "oauth.views.authorize.index.loginInfo": "Xxx xxx xxxxxx xx xx {userId}.",
   "oauth.views.authorize.index.redirectInfo": "Xxx xxxx xx xxxxxxxxxx xx {redirectUri}",
   "oauth.views.authorize.index.authorize": "Xxxxxxxxx",
+  "oauth.views.authorize.index.noDescription": "Xxxx xxxxxx xxxx xxx xxxxxxx x xxxxxxxxxxx",
   "oauth.views.code.index.code": "Xxxx xxxxxxxxxxxxx xxxx",
   "oauth.views.create-account.index.createAccount": "Xxxxxx x xxx {siteName} xxxxxxx",
   "oauth.views.create-account.index.register": "Xxxxxxxx",
